--- a/pages/tools/generators/url-shortener/index.html
+++ b/pages/tools/generators/url-shortener/index.html
@@ -2,66 +2,120 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>URL Shortener | Bita Digital Hub</title>
-  <meta name="description"
-        content="Shorten long links into clean, shareable URLs. Free online URL shortener by Bita Digital Hub." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <title>URL Shortener | Bita Digital Hub</title>
+
+  <meta
+    name="description"
+    content="Shorten long links into clean, shareable URLs. Free online URL shortener by Bita Digital Hub."
+  />
+
+  <!-- Styles -->
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/tools.css" />
 </head>
+
 <body class="tools-page">
 
-  <div id="header-placeholder"></div>
-  <script>
-    fetch("/components/header.html")
-      .then(r => r.text())
-      .then(html => document.getElementById("header-placeholder").innerHTML = html);
-  </script>
+<!-- HEADER -->
+<div id="header-placeholder"></div>
+<script>
+  fetch("/components/header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("header-placeholder").innerHTML = html;
+    });
+</script>
 
-  <main>
-    <div class="tool-wrapper">
+<!-- MAIN -->
+<main class="tool-main">
+
+  <div class="tool-wrapper">
+
+    <!-- TOOL HEADER -->
+    <header class="tool-header">
       <h1 class="tool-title">URL Shortener</h1>
       <p class="tool-description">
         Paste any long link and instantly get a shorter, cleaner URL.
-        All processing happens in your browser.
+        All processing happens directly in your browser.
       </p>
+    </header>
 
-      <label class="tool-label">Your long URL</label>
-      <input id="url-input" class="tool-input" placeholder="https://example.com/very/long/link" />
-
-      <button id="shorten-btn" class="tool-btn" style="margin-top:1rem;">Shorten URL</button>
-
-      <div id="output-box" class="output-box" style="margin-top:1rem;"></div>
-
-      <button id="copy-btn" class="tool-btn" style="display:none; margin-top:1rem;">
-        Copy
-      </button>
+    <!-- INPUT -->
+    <div class="tool-field">
+      <label for="url-input" class="tool-label">
+        Your long URL
+      </label>
+      <input
+        id="url-input"
+        class="tool-input"
+        type="url"
+        placeholder="https://example.com/very/long/link"
+        autocomplete="off"
+      />
     </div>
 
+    <!-- ACTION -->
+    <button id="shorten-btn" class="tool-btn">
+      Shorten URL
+    </button>
 
-       <!-- CTA -->
+    <!-- OUTPUT -->
+    <div
+      id="output-box"
+      class="output-box"
+      aria-live="polite"
+    ></div>
+
+    <!-- COPY -->
+    <button
+      id="copy-btn"
+      class="tool-btn"
+      style="display: none;"
+    >
+      Copy
+    </button>
+
+    <!-- CTA -->
     <section class="cta-section">
       <h2>Get Weekly Marketing Tools and Insights</h2>
-      <p>Join our newsletter for free tools, tutorials, strategies, and digital marketing insights to grow your online business.</p>
-      <a href="/pages/auth/signup.html" class="cta-button">Join the Newsletter</a>
-      <a href="/pages/tools/tools.html" class="cta-link">Explore Free Tools →</a>
+      <p>
+        Join our newsletter for free tools, tutorials, strategies,
+        and digital marketing insights to grow your online business.
+      </p>
+
+      <div class="cta-actions">
+        <a href="/pages/auth/signup.html" class="cta-button">
+          Join the Newsletter
+        </a>
+        <a href="/pages/tools/tools.html" class="cta-link">
+          Explore Free Tools →
+        </a>
+      </div>
     </section>
 
-    <!-- جای AdSense زیر ابزار -->
+    <!-- Ad Slot -->
     <div class="ad-in-content">
-      <!-- adsense block here -->
+      <!-- AdSense block -->
     </div>
-  </main>
 
-  <div id="footer-placeholder"></div>
-  <script>
-    fetch("/components/footer.html")
-      .then(r => r.text())
-      .then(html => document.getElementById("footer-placeholder").innerHTML = html);
-  </script>
+  </div>
+</main>
 
-  <script src="/js/core/script.js" defer></script>
-  <script src="/js/tools/url.js" defer></script>
+<!-- FOOTER -->
+<div id="footer-placeholder"></div>
+<script>
+  fetch("/components/footer.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("footer-placeholder").innerHTML = html;
+    });
+</script>
+
+<!-- SCRIPTS -->
+<script src="/js/core/script.js" defer></script>
+<script src="/js/tools/url.js" defer></script>
+
 </body>
 </html>
